# pyreflect-interface

./: .gitignore  AGENTS.md  README.md  REFL_212592_reduced_noQb.md  REFL_212592_reduced_noQb_nr.npy  REFL_212592_reduced_noQb_raw.npy  colab_gpu_worker.ipynb  dump.rdb  modal_worker.py  package-lock.json  plan.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: globals.css
docs/: FLOW.md
scripts/: rq_purge_job.py  test_zombie_cleanup.py
src/backend/: .env.example  main.py  modal_worker.py  pyproject.toml  requirements.txt  settings.yml
src/backend/data/curves/: sld_train.npy
src/backend/data/models/: ca519795-6e92-4b89-81dc-1988be14ae50.meta.json  cee294b9-50aa-4137-a244-b6a586fdc3dc.meta.json
src/backend/service/: __init__.py  app.py  config.py  schemas.py  settings_store.py
src/backend/service/integrations/: huggingface.py  mongo.py  redis_queue.py
src/backend/service/jobs/: __init__.py
src/backend/service/routers/: generate.py  health.py  history.py  jobs.py  models.py  status.py  upload.py
src/backend/service/services/: checkpointing.py  guards.py  limits_access.py  local_model_limit.py  pyreflect_runtime.py  rate_limit.py  real_data.py  stale_job_cleanup.py  synthetic.py
src/backend/tests_hardening/: conftest.py  test_config_helpers.py  test_gpu_tiers.py  test_guards.py  test_health_limits_endpoint.py  test_job_runner_layer_bounds_wiring.py  test_job_submit_gpu.py  test_layer_bounds_validation.py  test_limits_access.py  test_modal_worker_gpu.py  test_models_auth.py  test_rate_limit.py  test_retry_data_reuse.py  test_spawn_endpoint.py  test_synthetic_layer_bounds_wiring.py  test_upload_hardening.py  test_validate_limits.py
src/components/Header/: Header.module.css
src/interface/: .env.example  .env.local  .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
src/styles/: buttons.css  typography.css
testdata/: convert_csv_to_npy.py  convert_md_to_npy.py  layers_212592_27-7_v1(Reflectivity) (1).csv  layers_212592_27-7_v1_Reflectivity___1__nr.npy  layers_212592_27-7_v1_Reflectivity___1__sld.npy  layers_214309_27-7_fussy(Reflectivity) (1).csv  layers_214309_27-7_fussy_Reflectivity___1__nr.npy  layers_214309_27-7_fussy_Reflectivity___1__sld.npy  nr_train.npy
(+40 files in other folders)
