[project]
name = "pyreflect-backend"
version = "0.1.0"
description = "FastAPI backend for PyReflect interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=2.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pyreflect @ git+https://github.com/williamQyq/pyreflect.git@main",
    "typer>=0.9.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "pymongo>=4.6.0",
    "huggingface-hub>=0.20.0",
]

[dependency-groups]
dev = ["modal>=0.64.0"]
